@@ -11,10 +11,17 @@ plan tests => 11;
 use Net::SSLeay;
 Net::SSLeay::load_error_strings();
 
+# Note, die_now usually just prints the process id and the argument string eg:
+# 57611: test
+# but on some systems, perhaps if diagnostics are enabled, it might [roduce something like:
+# found: Uncaught exception from user code:
+# 	57611: test
+# therefore the qr match strings below have been chnaged so they dont have tooccur at the 
+# beginning of the line.
 {
     throws_ok(sub {
             Net::SSLeay::die_now('test')
-    }, qr/^$$: test\n$/, 'die_now dies without errors');
+    }, qr/$$: test\n$/, 'die_now dies without errors');
 
     lives_ok(sub {
             Net::SSLeay::die_if_ssl_error('test');
@@ -23,12 +30,12 @@ Net::SSLeay::load_error_strings();
     put_err();
     throws_ok(sub {
             Net::SSLeay::die_now('test');
-    }, qr/^$$: test\n$/, 'die_now dies with errors');
+    }, qr/$$: test\n$/, 'die_now dies with errors');
 
     put_err();
     throws_ok(sub {
             Net::SSLeay::die_if_ssl_error('test');
-    }, qr/^$$: test\n$/, 'die_if_ssl_error dies with errors');
+    }, qr/$$: test\n$/, 'die_if_ssl_error dies with errors');
 }
 
 {
@@ -36,7 +43,7 @@ Net::SSLeay::load_error_strings();
 
     throws_ok(sub {
             Net::SSLeay::die_now('foo');
-    }, qr/^$$: foo\n$/, 'die_now dies without arrors and with trace');
+    }, qr/$$: foo\n$/, 'die_now dies without arrors and with trace');
 
     lives_ok(sub {
             Net::SSLeay::die_if_ssl_error('foo');
@@ -47,14 +54,14 @@ Net::SSLeay::load_error_strings();
             throws_ok(sub {
                     Net::SSLeay::die_now('foo');
             }, qr/^$$: foo\n$/, 'die_now dies with errors and trace');
-    }, qr/^foo $$: 1 - error:2006d080/i, 'die_now raises warnings about the occurred error when tracing');
+    }, qr/foo $$: 1 - error:2006d080/i, 'die_now raises warnings about the occurred error when tracing');
 
     put_err();
     warning_like(sub {
             throws_ok(sub {
                 Net::SSLeay::die_if_ssl_error('foo');
             }, qr/^$$: foo\n$/, 'die_if_ssl_error dies with errors and trace');
-    }, qr/^foo $$: 1 - error:2006d080/i, 'die_if_ssl_error raises warnings about the occurred error when tracing');
+    }, qr/foo $$: 1 - error:2006d080/i, 'die_if_ssl_error raises warnings about the occurred error when tracing');
 }
 
 sub put_err {
